// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - ci-cd:github with defaults options should match files snapshot 1`] = `
{
  ".github/workflows/main.yml": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - ci-cd:github with graalvmSupport options should match files snapshot 1`] = `
{
  ".github/workflows/graalvm.yml": {
    "stateCleared": "modified",
  },
  ".github/workflows/main.yml": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
}
`;
